0.43.3 - fix scrollbar darkmode

--- a/src/styles/ui.styl
+++ b/src/styles/ui.styl
@@ -6,6 +6,7 @@ AREAS
   background $color-white
   color $color-text
 
+  &.darkMode,
   .darkMode &
     background $color-background-darkmode
     color $color-text-darkmode
@@ -14,6 +15,7 @@ AREAS
   background $color-background-light-gray
   color $color-text
 
+  &.darkMode,
   .darkMode &
     background lighten($color-background-darkmode, 6%)
     color $color-text-darkmode
